--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+0.2.1 - 07/11/2015
+- Fixed android non rar support, rearrange code
+
 0.2.0 - 07/11/2015
 - Fixed android rar support, works with smb shares
 
