--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
+1.0.0 - 19/11/2022
+- Adding new BSPlayer Engines (OpenSubtitles, GetSubtitle)
+
 0.3.0 - 15/05/2022
-- Migrating to python 3, support kodi 19
+- Migrating to python 3, support Kodi 19
 
 0.2.1 - 07/11/2015
 - Fixed android non rar support, rearrange code
