--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.0.1 - 21/11/2022
+- Fixing regression issue with SMB file opening
+
 1.0.0 - 19/11/2022
 - Adding new BSPlayer Engines (OpenSubtitles, GetSubtitle)
 
