--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -31,7 +31,7 @@ msgid "Password"
 msgstr ""
 
 msgctxt "#32005"
-msgid "Your OpenSubtitles.org username or password is empty"
+msgid "Your OpenSubtitles.org username or password is empty."
 msgstr ""
 
 msgctxt "#32006"
